# cuga-eval

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  TOKENUSAGETRACKER_IMPLEMENTATION.md  conftest.py  fix_line_endings.bat  justfile  pyproject.toml  setup_appworld.bat  setup_appworld.sh  setup_cuga.bat  setup_cuga.sh  setup_m3.bat  setup_m3.sh
.github/ISSUE_TEMPLATE/: documentation-request.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: chore.md  docs.md
.github/workflows/: ci.yml
analytics/: README.md
analytics/trace_comparison_rules/: README.md  pipeline.py
analytics/trace_comparison_rules/comparison_rules/: 2026-05-03_16-24-50_cuga_lite_top_comparisons.txt
analytics/trace_comparison_rules/config/: all_trajectories.conf  default.conf  m3_all_trajectories.conf  n_pairs.conf
analytics/trace_comparison_rules/prompts/: comparison_designer.jinja  root_cause_analysis.jinja
analytics/trace_comparison_rules/src/: comparison_designer.py  comparison_functions.py  langfuse_adapter.py  llm_client.py  output_extraction.py  root_cause_analysis.py  test_langfuse_adapter.py  test_single_step.py  trace_adapter.py  trace_ir.py  trace_step_comparison.py  trace_utils.py
benchmarks/appworld/: .gitignore  README.md  analyze.bat  analyze.sh  appworld_eval.py  appworld_eval_react.py  categorize_tasks_official.py  compare.bat  compare.sh  eval.bat  eval.sh  eval_appworld_sdk.py  eval_config.toml  mcp_servers_appworld.yaml  run_app.bat  run_app.sh  run_eval.bat  run_eval.sh  run_registry.bat  run_registry.sh  task_categorization.json
benchmarks/appworld/config/: appworld.env
benchmarks/appworld/debug/: code.txt  example.py  task_id.txt
benchmarks/appworld/debug/tools/: file_system_tools.json  (+2 more)
benchmarks/appworld/tests/: test_avg_steps.py  test_experiment_manager.py
benchmarks/appworld/utils/: appworld_data_collection.py  appworld_utils.py
benchmarks/bpo/: README.md  __init__.py  api_candidate_source.py  api_candidate_source_error.py  api_skills.py  api_skills_error.py  bpo_test_suite_v1.json  bundle.py  compare.bat  compare.sh  compare_results.py  csv_to_parquet.py  data_loader.py  eval.bat  eval.sh  eval_bench_sdk.py  eval_bench_sdk_react.py  llm_judge.py  main.py  mcp_server.py  metrics.py  models.py  run_app.bat  run_app.sh  run_registry.bat  run_registry.sh
benchmarks/bpo/config/: .env.example  bpo.env  settings.groq.toml
benchmarks/bpo/data/: bpo_test_suite_v1.json  candidate_data.parquet  large_response_fixture.json  tasks_edge_cases.json  tasks_http_errors.json  tasks_schema_violations.json  tasks_type_mismatch.json  tasks_undocumented.json
benchmarks/bpo/mcp_servers/: bpo.yaml
benchmarks/bpo/policies/: POLICIES.md  anti_hallucination_numeric_guardrails.md  api_capability_boundaries.md  average_vs_total.md  enumerated_checklist_answers.md  error_tool_warnings.md  invalid_id_and_unsupported_details.md  mandatory_api_evidence_before_answer.md  missing_req_id_vs_unsupported.md  mixed_skill_source_checklist_strict.md  multi_api_reasoning.md  policies.json  timeframe_metadata_strict.md  verbatim_definitions_and_dates.md
benchmarks/bpo/tests/: __init__.py  conftest.py  test_bundle.py  test_candidate_source_api.py  test_compare_results.py  test_constraints.py  test_error_apis.py  test_keyword_matching.py  test_react_agent_runtime.py  test_skills_api.py
benchmarks/helpers/: BUNDLES.md  __init__.py  _delegate_to_bash.bat  bundle.py  common.bat  common.sh  compare_report.py  config_loader.py  load_env.bat  load_env.sh  logging_args.py  metrics.py  react_agent.py  react_agent_prompt.txt  run_registry.bat  run_registry.sh  sdk_eval_helpers.py  token_usage.py  token_usage_tracker_callback.py
benchmarks/helpers/tests/: test_compare_report.py  test_logging_args.py
benchmarks/m3/: CONTAINER_SETUP.md  README.md  analyze.bat  analyze.sh  clean.bat  clean.sh  compare.bat  compare.sh  direct_mcp_client.py  eval.bat  eval.sh  eval_m3.py  eval_m3_multiturn.py  eval_m3_react.py  eval_m3_task_1_enterprise_style.py  m3_data_loader.py  m3_vakra_score.py  run_registry.bat  run_registry.sh  run_with_container.bat  run_with_container.sh
benchmarks/m3/config/: m3.env  m3.env.example  m3_registry.yaml  m3_registry_1.yaml  m3_registry_2.yaml  m3_registry_3.yaml  m3_registry_4.yaml  m3_registry_m3_data.yaml
benchmarks/m3/data/: address.json  hockey.json  olympics.json  olympics_mutliturn.json
benchmarks/m3/evaluator/: README.md  constant.py  domain_mapping.json  evaluator.py  judge.py  mcp_tools.py  prompt.py  scorer.py  utils.py
benchmarks/m3/mcp_servers/: fastapi_container.yaml  hockey_yaml.yaml  m3_registry.yaml  olympics.yaml
benchmarks/m3/policies/: P-OF-1-single-tool-fact-citation.md  P-OF-2-strip-hedging.md.disabled  P-PB-1-no-enumeration.md  P-PB-2-one-composite-tool-no-corroboration.md  P-PB-3-no-idempotent-retries.md  P-PB-4-validation-error-recovery.md  P-TG-1-mountain-count-disambiguation.md  P-TG-2-country-with-most-umpires-returns-id.md  policies.json
benchmarks/m3/tests/: conftest.py  test_partial_save_on_interrupt.py  test_vakra_langfuse_scores.py  test_vakra_trajectory_patch.py
benchmarks/oak_health_insurance/: README.md  calculate_test_score.py  compare.bat  compare.sh  data.py  eval.bat  eval.sh  eval_bench.py  eval_bench_sdk.py  main.py  models.py  oak_health_test_suite_v1.json  oak_health_test_suite_v1_backup.json  oak_mcp_servers.yaml  oak_policies.py  run_app.bat  run_app.sh  run_registry.bat  run_registry.sh
config/: global.env
config_loader/: loader.py
docs/m3-vakra-analysis-20260428/: cuga_vs_react_full_analysis.md
scripts/: analyze.bat  analyze.sh  check_no_local_appworld.sh  check_no_local_appworld_in_pyproject.sh  check_no_task_prefix.py  compare.bat  compare.sh  create_eval_bundle.py  eval.bat  eval.sh  m3_pad_to_cap_verify.bat  model_profiles.bat  model_profiles.sh  policies_md_to_json.py  test_bat_scripts.ps1  viz.bat  viz.sh
templates/: calculate_test_score.py  eval_loop_template.py  simple_example.json
(+10 files in other folders)
