[project]
name = "cuga-evaluation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic",
    "loguru",
    "cuga",
    "cugaviz",
    "rapidfuzz",
    "python-dotenv>=1.0.0",
    "pyarrow>=23.0.0",
    "appworld",
    "griffelib",
    "sentence-transformers",
    "langfuse>=3",
    # docling 2.92.0 split into a slim package and removed `docling.chunking`,
    # but langchain-docling 2.0.0 (a transitive of cuga) still imports it.
    # Pin to 2.91.x until langchain-docling catches up with the slim layout.
    "docling>=2.26,<2.92",
]

[tool.uv.sources]
cuga = { path = "../cuga-agent", editable = true }
appworld = { path = "benchmarks/appworld/appworld", editable = true }

[project.scripts]
cuga = "cuga.cli:app"

[dependency-groups]

dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14.3",
    "pre-commit>=4.3.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7",
]

groq = [
    "langchain-groq>=0.3.8",
]

sandbox = [
    "llm-sandbox>=0.1.3",
]

[tool.pytest.ini_options]
# Only collect from these roots. The upstream AppWorld submodule under
# benchmarks/appworld/appworld has its own pytest config and is not ours to gate.
# Per-benchmark test dirs (m3/tests, appworld/tests, helpers/tests) were
# missing before, which made `just ci` silently skip the regression suite for
# every PR that added tests under them. Pytest tolerates testpath entries that
# don't yet exist, so listing them here is safe even when no tests live there.
testpaths = [
    "tests",
    "benchmarks/bpo/tests",
    "benchmarks/m3/tests",
    "benchmarks/appworld/tests",
    "benchmarks/helpers/tests",
]
# Put the repo root on sys.path so tests like
# `from benchmarks.appworld.utils.appworld_data_collection import ...`
# resolve under `just ci`. Each per-benchmark `tests/__init__.py` makes its
# directory its own ``tests`` package, which otherwise hides the repo root
# from pytest's rootdir autodiscovery.
pythonpath = ["."]
markers = [
    "sanity: fast unit tests, run on every commit",
    "regression: integration tests, run on every PR",
    "stability: long-running tests, scheduled only",
]
# --import-mode=importlib avoids module-name collisions between the four
# per-benchmark `tests/__init__.py` packages (each named ``tests``), which
# under the default ``prepend`` mode would shadow each other and fail to
# collect with ``ModuleNotFoundError: No module named 'tests.test_X'``.
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = [
    "tests",
    "benchmarks/bpo/tests",
    "benchmarks/appworld/appworld",
    "vendor",
    ".venv",
]
skips = ["B101"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [
    "benchmarks/appworld/appworld",
    "vendor",
    "uv.lock",
    ".venv",
    ".cuga",
    "logging",
    "config_loader",
]

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
# E402: many entry points must load env via config_loader before importing cuga;
#       reordering would break runtime initialization.
# E501: line length is enforced by the formatter.
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106"]
"benchmarks/bpo/tests/**" = ["S101", "S105", "S106"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "preserve"
