[project]
name = "cuga-evaluation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic",
    "loguru",
    "cuga",
    "cugaviz",
    "rapidfuzz",
    "python-dotenv>=1.0.0",
    "pyarrow>=23.0.0",
    "griffelib",
    "sentence-transformers",
    "langfuse>=3",
    # docling 2.92.0 split into a slim package and removed `docling.chunking`,
    # but langchain-docling 2.0.0 (a transitive of cuga) still imports it.
    # Pin to 2.91.x until langchain-docling catches up with the slim layout.
    "docling>=2.26,<2.92",
]

[tool.uv]
# Force the resolver to pick package versions that ship wheels (or buildable
# sdists) for these targets. Without this, uv's universal resolution can pick
# versions whose wheel coverage has gaps on one of our supported platforms —
# notably text2num 3.0.2, which lacks x86_64 manylinux wheels for some of the
# Python forks uv considers — and the install then fails on Linux x86_64.
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
cuga = { path = "../cuga-agent", editable = true }
# `appworld` is intentionally NOT listed here. The appworld benchmark is opt-in:
# users run `./setup_appworld.sh`, which clones the upstream repo into
# `benchmarks/appworld/appworld` and then `uv add --editable ... --group appworld`,
# injecting the source + group entries locally. Keeping it absent here lets
# `uv sync` succeed on fresh checkouts and in CI without the appworld submodule.

[project.scripts]
cuga = "cuga.cli:app"

[dependency-groups]

dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14.3",
    "pre-commit>=4.3.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7",
]

groq = [
    "langchain-groq>=0.3.8",
]

sandbox = [
    "llm-sandbox>=0.1.3",
]

# Note: the `appworld` dependency group is added locally by ./setup_appworld.sh
# (via `uv add --editable benchmarks/appworld/appworld --group appworld`), not
# committed here. See the comment above [tool.uv.sources].

[tool.pytest.ini_options]
# Only collect from these roots. The upstream AppWorld submodule under
# benchmarks/appworld/appworld has its own pytest config and is not ours to gate.
# Per-benchmark test dirs (m3/tests, appworld/tests, helpers/tests) were
# missing before, which made `just ci` silently skip the regression suite for
# every PR that added tests under them. Pytest tolerates testpath entries that
# don't yet exist, so listing them here is safe even when no tests live there.
testpaths = [
    "tests",
    "benchmarks/bpo/tests",
    "benchmarks/m3/tests",
    "benchmarks/appworld/tests",
    "benchmarks/helpers/tests",
]
# Put the repo root on sys.path so tests like
# `from benchmarks.appworld.utils.appworld_data_collection import ...`
# resolve under `just ci`. Each per-benchmark `tests/__init__.py` makes its
# directory its own ``tests`` package, which otherwise hides the repo root
# from pytest's rootdir autodiscovery.
pythonpath = ["."]
markers = [
    "sanity: fast unit tests, run on every commit",
    "regression: integration tests, run on every PR",
    "stability: long-running tests, scheduled only",
]
# Use importlib import mode (`--import-mode=importlib`) so per-benchmark
# `tests/` packages don't collide on the shared `tests.*` module namespace.
# Without this, the top-level `tests/` dir and `benchmarks/*/tests/`
# packages both try to register as the `tests` package and pytest fails
# to collect with `ModuleNotFoundError: No module named 'tests.test_avg_steps'`
# (introduced by PR #87 when per-benchmark test dirs were added to
# testpaths). importlib mode imports each test file independently.
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = [
    "tests",
    "benchmarks/bpo/tests",
    "benchmarks/appworld/appworld",
    "vendor",
    ".venv",
]
skips = ["B101"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [
    "benchmarks/appworld/appworld",
    "vendor",
    "uv.lock",
    ".venv",
    ".cuga",
    "logging",
    "config_loader",
]

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
# E402: many entry points must load env via config_loader before importing cuga;
#       reordering would break runtime initialization.
# E501: line length is enforced by the formatter.
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106"]
"benchmarks/bpo/tests/**" = ["S101", "S105", "S106"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "preserve"
